Extra Projects except assingment removed

--- a/.recommenders/caches/identified-project-coordinates.json
+++ b/.recommenders/caches/identified-project-coordinates.json
@@ -1,1 +1,1 @@
-{}
+[[{"location":"C:\\Users\\mzafar\\.m2\\repository\\junit\\junit\\3.8.1\\junit-3.8.1.jar","type":"JAR","hints":{}},"ABSENT"],[{"location":"D:\\gr\\projects\\gr_work\\app","type":"PROJECT","hints":{"PROJECT_NAME":"app"}},"com.quickrescue:app:0.0.1"]]
